# driftmind-experiments

./: .gitignore  pyproject.toml  readme.md
driftmind/: __init__.py  api.py  generator.py  utils.py
driftmind.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: cold_start_demo.ipynb
notebooks/: Basic Experiment.ipynb
old/notebooks/: Basic Experiment.ipynb
resources/: DRIFTMIND_CONNECT.txt
tests/: test_generator.py
